# staggered_routing_in_amod_systems

./: .gitignore  PRESETS.py  build_cpp_module.sh  configuration.sh  create_instance.py  executable  joblog.csv  main.py  main_cluster.py  my_cluster_configuration.sh  online.py  prepare_cluster.py  readme.md  requirements.txt  run.sh  run_list.csv
cpp_module/: CMakeLists.txt  readme.md
cpp_module/catch2_tests/: CMakeLists.txt  Makefile  catch_main.cpp  cmake_install.cmake  testLocalSearch.cpp
cpp_module/catch2_tests/instancesForTest/instanceForLocalSearch/: arcBasedShortestPaths.txt  conflictingSets.txt  dueDates.txt  earliestDepartureTimes.txt  latestDepartureTimes.txt  nominalCapacitiesArcsUtilized.txt  parameters.txt  releaseTimes.txt  remainingSlack.txt  travelTimesArcsUtilized.txt
cpp_module/include/: conflict_searcher.h  instance.h  local_search.h  module.h  scheduler.h  solution.h  tie_manager.h
cpp_module/lib/catch2/include/: catch.hpp
cpp_module/src/: bindings.cpp  module.cpp
cpp_module/src/modules/: assertionsOnImprovementStep.cpp  assertions_update_solution.cpp  conflictSearcher.cpp  conflict_searcher.cpp  constructSchedule.cpp  construct_solution.cpp  improveSolution.cpp  improve_solution.cpp  improve_solutions_assertions.cpp  local_search.cpp  printsAndAssertionsUpdateSchedule.cpp  supportFunctionsForTests.cpp  tieFunctions.cpp  tie_manager.cpp  updateSchedule.cpp  update_solution.cpp
cpp_module/src/modules/update_solution/: conflicts.cpp  departures.cpp  helpers.cpp  initialization.cpp  main.cpp  marking.cpp  processing.cpp
scripts/: dispatch_instance.sh  on_error.sh  queue_job.sh
sets_of_experiments/271224_NO_LS_COMPARISON_PAPER_MAN100_SHORTYES_MF[20,40]_OFF_T5000_D31_S1_[0.5]_[1]_STAG10_DL25_OPTYES_WARMYES_LS[TRUE,FALSE]_SMPLFYYES/: analyze_no_ls_comparison.py
sets_of_experiments/300125_ALGO_PERF_PAPER_MAN100_SHORTYES_MF[20,40]_OFF_ON_T5000_D31_S1_[0.5_0.9_1.1]_[1_1.8_2]_STAG10_DL25_OPTYES_WARMYES_LSTRUE_SMPLFYYES/: analyze_algo_performance.py
sets_of_experiments/ALGO_PERFORMANCE_FUTURE_PAPER/: joblog.csv  xzts.py
sets_of_experiments/ALGO_PERF_MAN10_SHORTYES_LC_MF10_OFF_ON_T100_D31_S1_[0.15][1]_STAG25_DL100_ATL100_ETL100_OPTYES_WARMYES_IWARMYES_CBLSYES/: analyze_algo_performance.py
sets_of_experiments/ALGO_PERF_MAN10_SHORTYES_LC_MF10_OFF_T100_D31_S1_[0.15][1]_STAG25_DL100_ATL100_ETL100_OPTYES_WARMYES_IWARMYES_CBLSYES/: analyze_algo_performance.py
sets_of_experiments/ALGO_PERF_MAN10_SHORTYES_MF[10,100]_OFF_ON_T100_D31_S1_[0.15][1]_STAG25_DL100_ATL100_ETL100_OPTYES_WARMYES_IWARMYES_CBLSYES/: analyze_algo_performance.py
sets_of_experiments/ALGO_PERF_PAPER_MAN100_SHORTYES_MF[15,30]_OFF_ON_T5000_D31_S1_[0.5][1]_STAG10_DL25_ATL7200_OPTYES_WARMYES_IWARMYES_CBLSYES/: analyze_algo_performance.py
sets_of_experiments/ALGO_PERF_PAPER_MAN100_SHORTYES_MF[15,30]_OFF_ON_T5000_D31_S1_[1][1]_STAG10_DL25_ATL7200_OPTYES_WARMYES_IWARMYES_CBLSYES/: analyze_algo_performance.py
sets_of_experiments/CONFLICTING_SETS_STATS/: analyze_algo_performance.py
sets_of_experiments/STAGGERING_ANALYSIS_MAN10_SHORTYES_LC_MF10_OFF_T100_D1_S1_[0.15][1]_VARSTAG_DL100_ATL100_ETL100_OPTYES_WARMYES_IWARMYES_CBLSYES/: analyze_staggering_analysis.py
sets_of_experiments/pwl_comparison/: visualize_pwl.py
src/: inputData.py  input_data.py  runProcedure.py
src/MIP/: __init__.py  (+10 more)
(+2362 files in other folders)
